--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
 <div id="ban-screen">
     <h1>ДОСТУП ОБМЕЖЕНО</h1>
-    <p>Ваш акаунт було заблоковано назавжди за порушення правил імперії або спробу обману системи.</p>
+    <p>Ваш акаунт було заблоковано назавжди за порушення правил гри або спробу обману системи.</p>
 </div>
 
 <div id="admin-auth-overlay">
@@ -586,3 +586,4 @@
 </script>
 </body>
 </html>
+
